crates/daemon/tests/snapshots/cli_help__cli_help_briefing_recipient.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 14
expression: stdout
---
Usage: mxr briefing recipient [OPTIONS] <EMAIL>

Arguments:
  <EMAIL>

Options:
      --account <ACCOUNT>
      --refresh
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
