crates/daemon/tests/snapshots/cli_help__cli_help_briefing_thread.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 14
expression: stdout
---
Usage: mxr briefing thread [OPTIONS] <THREAD_ID>

Arguments:
  <THREAD_ID>

Options:
      --refresh
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
