crates/daemon/tests/snapshots/cli_help__cli_help_bug_report.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Generate a sanitized diagnostic bundle

Usage: mxr bug-report [OPTIONS]

Options:
      --edit
      --stdout
      --clipboard
      --github
      --output <OUTPUT>
      --verbose
      --full-logs
      --no-sanitize
      --since <SINCE>
  -h, --help             Print help
