crates/daemon/tests/snapshots/cli_help__cli_help_cadence_list.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 14
expression: stdout
---
List currently watched contacts

Usage: mxr cadence list [OPTIONS]

Options:
      --account <ACCOUNT>
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
