crates/daemon/tests/snapshots/cli_help__cli_help_cadence_unwatch.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 14
expression: stdout
---
Remove a contact from the watchlist

Usage: mxr cadence unwatch [OPTIONS] <EMAIL>

Arguments:
  <EMAIL>

Options:
      --account <ACCOUNT>
  -h, --help               Print help
