crates/daemon/tests/snapshots/cli_help__cli_help_cat.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Display a message. Pass a positional ID, pipe IDs on stdin, or resolve a list with `--search QUERY` (then `--first` for the most recent match or `--limit N` for the top N)

Usage: mxr cat [OPTIONS] [MESSAGE_ID]

Arguments:
  [MESSAGE_ID]  Message ID (or omit when piping IDs / using --search)

Options:
      --search <SEARCH>  Resolve target(s) by query instead of a positional ID. Iterates over each match with a separator
      --first            Only display the most recent match (when --search is used)
      --limit <LIMIT>    Cap the number of matches displayed (when --search is used)
      --view <VIEW>      [possible values: reader, raw, html, headers]
      --assets
      --raw
      --html
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
