crates/daemon/tests/snapshots/cli_help__cli_help_chimes.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Manage local notification chimes

Usage: mxr chimes [OPTIONS] [COMMAND]

Commands:
  status   Show current chime settings
  enable   Turn notification chimes on
  disable  Turn notification chimes off
  set      Set the sound for one event
  test     Play the configured sound for one event
  help     Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
